--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1>Hello World!</h1>
+
+    <section id="welcome-section">
+      <h1>Hello I am Mimic</h1>
+    </section>
+
+   
 
     <script  src="js/index.js"></script>
   </body>
