--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <section id="welcome-section">
       <h1>Hello I am Mimic</h1>
     </section>
-
-   
+    
+    <section id="projects" class="project-title">
+      <p class="project-tile"></p>
+    </section>
 
     <script  src="js/index.js"></script>
   </body>
