--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <h1>Hello I am Mimic</h1>
     </section>    
 
+    <section id="projects">
+      <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" id="profile-link" target="_blank">CLick here to go to a project</a>
+      <h2 class="project-tile">Project Tiles</h2>
+    </section>
+
     <div>      
       <a href="welcome-section">Go to welcome section</a>
     </div>
